--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>setImmediate API demo</title>
   <link rel="stylesheet" type="text/css" href="demo.css">
 </head>
-<body onload="initializePage">
+<body onload="initializePage();">
   <h1 id="DemoTitle">setImmediate API demo</h1>
   <div id="DemoScreenreaderText">Screen-Reader Text Goes Here</div>
   <div id="DemoContent">
@@ -271,23 +271,23 @@
         <div class="TestControlSet">
           <div class="TestTitle">HTML4 (~15ms Timers)</div>
           <div class="TestResults" id="HTML4TestResuts"></div>
-          <input class="TestButton" type="submit" value="Run Test" onclick="sort.startSetTimeout15">
+          <input class="TestButton" type="submit" value="Run Test" onclick="sort.startSetTimeout15();">
         </div>
         <div class="TestControlSet">
           <div class="TestTitle">HTML5 (4ms Timers)</div>
           <div class="TestResults" id="HTML5TestResults"></div>
-          <input class="TestButton" type="submit" value="Run Test" onclick="sort.startSetTimeout0">
+          <input class="TestButton" type="submit" value="Run Test" onclick="sort.startSetTimeout0();">
         </div>
         <div class="TestControlSet">
           <div class="TestTitle">setImmediate</div>
           <div class="TestResults" id="setImmediateTestResults"></div>
-          <input class="TestButton" id="setImmediateTestButton" type="submit" value="Run Test" onclick="sort.startSetImmediate">
+          <input class="TestButton" id="setImmediateTestButton" type="submit" value="Run Test" onclick="sort.startSetImmediate();">
         </div>
       </div>
     </div>
   </div>
   <div id="DemoDetails">
-    <h2>About The setImmediate API</h2>
+    <h2>About the setImmediate API</h2>
     <p>Web developers <a href="http://answers.oreilly.com/topic/1506-yielding-with-javascript-timers/" target="_blank">commonly use the setTimeout API</a>
       to break apart long running JavaScript operations. This approach allows the browser to process outstanding work, such as layouts and paints, and
       then waits for the specified period of time before calling back into JavaScript. It's an important design pattern when building responsive web applications.</p>
