--- a/index.html
+++ b/index.html
@@ -320,8 +320,8 @@
       <a href="https://github.com/lewisje/setImmediate-shim-demo">GitHub</a>.
     </p>
   </div>
-  <script type="text/javascript" src="setImmediate.js"></script>
-  <script type="text/javascript" async="async" defer="defer" src="demo.js"></script>
   <div style="clear: both;"></div>
+  <script type="text/javascript" async = "async" src="setImmediate.js"></script>
+  <script type="text/javascript" async="async" defer="defer" src="demo.js"></script>
 </body>
 </html>
