go back to sync

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
     </p>
   </div>
   <div style="clear: both;"></div>
-  <script type="text/javascript" async = "async" src="setImmediate.js"></script>
-  <script type="text/javascript" async="async" defer="defer" src="demo.js"></script>
+  <script type="text/javascript" src="setImmediate.js"></script>
+  <script type="text/javascript" src="demo.js"></script>
 </body>
 </html>
