add info. on what polyfill is being used

--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
   </div>
   <div id="DemoDetails">
     <h2>About the setImmediate API</h2>
+    <h3 id="polyfill">Your browser is not polyfilling the setImmediate API.</h3>
     <p>Web developers <a href="http://answers.oreilly.com/topic/1506-yielding-with-javascript-timers/" target="_blank">commonly use the setTimeout API</a>
       to break apart long running JavaScript operations. This approach allows the browser to process outstanding work, such as layouts and paints, and
       then waits for the specified period of time before calling back into JavaScript. It's an important design pattern when building responsive web applications.</p>
